Used near miss and then used some algorithms

--- a/EDGE_classwork_19_7_2023.ipynb
+++ b/EDGE_classwork_19_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHrYgGF40twXsL9c/KmUZZ",
+      "authorship_tag": "ABX9TyP6G9tPO4M9OMdMA8yVrcqq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2815,9 +2815,415 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Random Forest\n",
+        "rf = RandomForestClassifier(random_state=100)\n",
+        "rf.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions = rf.predict(x_test)\n",
+        "print(classification_report(y_test, predictions))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions)))\n",
+        "\n",
+        "\n",
+        "#Decison Tree\n",
+        "DT = DecisionTreeClassifier()\n",
+        "DT.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions1 = DT.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions1))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions1))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions1)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# XGB classifier machine object\n",
+        "XGB = XGBClassifier()\n",
+        "# train the model on train set\n",
+        "XGB.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions2 = XGB.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions2))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions2))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions2)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# KNN classifier machine object\n",
+        "KNN =  KNeighborsClassifier()\n",
+        "# train the model on train set\n",
+        "KNN.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions3 = KNN.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions3))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions3))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions3)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# support vector machine object\n",
+        "svm = SVC(kernel='linear')\n",
+        "# train the model on train set\n",
+        "svm.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions4 = svm.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions4))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions4))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions4)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qcODIVmodDP7",
+        "outputId": "3f3f8afa-b954-48b0-9673-05aab2e76556"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.77      0.89      0.83        27\n",
+            "           1       0.90      0.79      0.84        34\n",
+            "\n",
+            "    accuracy                           0.84        61\n",
+            "   macro avg       0.84      0.84      0.84        61\n",
+            "weighted avg       0.84      0.84      0.84        61\n",
+            "\n",
+            "mse= 0.16393442622950818\n",
+            "msle= 0.07876278916691827\n",
+            "mae= 0.16393442622950818\n",
+            "rmse= 0.40488816508945796\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.77      0.89      0.83        27\n",
+            "           1       0.90      0.79      0.84        34\n",
+            "\n",
+            "    accuracy                           0.84        61\n",
+            "   macro avg       0.84      0.84      0.84        61\n",
+            "weighted avg       0.84      0.84      0.84        61\n",
+            "\n",
+            "mse= 0.16393442622950818\n",
+            "msle= 0.07876278916691827\n",
+            "mae= 0.16393442622950818\n",
+            "rmse= 0.40488816508945796\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.75      0.78      0.76        27\n",
+            "           1       0.82      0.79      0.81        34\n",
+            "\n",
+            "    accuracy                           0.79        61\n",
+            "   macro avg       0.78      0.79      0.78        61\n",
+            "weighted avg       0.79      0.79      0.79        61\n",
+            "\n",
+            "mse= 0.21311475409836064\n",
+            "msle= 0.10239162591699373\n",
+            "mae= 0.21311475409836064\n",
+            "rmse= 0.4616435357484827\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.50      0.52      0.51        27\n",
+            "           1       0.61      0.59      0.60        34\n",
+            "\n",
+            "    accuracy                           0.56        61\n",
+            "   macro avg       0.55      0.55      0.55        61\n",
+            "weighted avg       0.56      0.56      0.56        61\n",
+            "\n",
+            "mse= 0.4426229508196721\n",
+            "msle= 0.21265953075067925\n",
+            "mae= 0.4426229508196721\n",
+            "rmse= 0.6652991438591156\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.88      0.85      0.87        27\n",
+            "           1       0.89      0.91      0.90        34\n",
+            "\n",
+            "    accuracy                           0.89        61\n",
+            "   macro avg       0.89      0.88      0.88        61\n",
+            "weighted avg       0.89      0.89      0.88        61\n",
+            "\n",
+            "mse= 0.11475409836065574\n",
+            "msle= 0.05513395241684278\n",
+            "mae= 0.11475409836065574\n",
+            "rmse= 0.3387537429470791\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#apply near miss\n",
+        "from imblearn.under_sampling import NearMiss\n",
+        "nr = NearMiss()\n",
+        "\n",
+        "x_train_miss, y_train_miss = nr.fit_resample(x_train, y_train.ravel())"
+      ],
+      "metadata": {
+        "id": "xDCRvRPNdcOj"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Near miss result\n",
+        "print('After undersampling, the shape of train_X: {}'.format(x_train_miss.shape))\n",
+        "print('After UnderSampling, the shape of train_y: {} \\n'.format(y_train_miss.shape))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"Before UnderSampling, counts of label '1': {}\".format(sum(y_train == 1)))\n",
+        "print(\"Before UnderSampling, counts of label '0': {}\".format(sum(y_train == 0)))\n",
+        "print(\"After UnderSampling, counts of label '1': {}\".format(sum(y_train_miss == 1)))\n",
+        "print(\"After UnderSampling, counts of label '0': {}\".format(sum(y_train_miss == 0)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k6cXBUOSd4cj",
+        "outputId": "40bd6f56-3872-44c9-fbbc-5714c286cfa1"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "After undersampling, the shape of train_X: (222, 13)\n",
+            "After UnderSampling, the shape of train_y: (222,) \n",
+            "\n",
+            "Before UnderSampling, counts of label '1': 130\n",
+            "Before UnderSampling, counts of label '0': 111\n",
+            "After UnderSampling, counts of label '1': 111\n",
+            "After UnderSampling, counts of label '0': 111\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Random Forest\n",
+        "rf2 = RandomForestClassifier(random_state=100)\n",
+        "rf2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions = rf2.predict(x_test)\n",
+        "print(classification_report(y_test, predictions))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions)))\n",
+        "\n",
+        "\n",
+        "#Decison Tree\n",
+        "DT2 = DecisionTreeClassifier()\n",
+        "DT2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions1 = DT2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions1))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions1))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions1)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# XGB classifier machine object\n",
+        "XGB2 = XGBClassifier()\n",
+        "# train the model on train set\n",
+        "XGB2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions2 = XGB2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions2))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions2))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions2)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# KNN classifier machine object\n",
+        "KNN2 =  KNeighborsClassifier()\n",
+        "# train the model on train set\n",
+        "KNN2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions3 = KNN2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions3))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions3))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions3)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# support vector machine object\n",
+        "svm2 = SVC(kernel='linear')\n",
+        "# train the model on train set\n",
+        "svm2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions4 = svm2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions4))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions4))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions4)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DtcD60CweJkE",
+        "outputId": "481fc5b8-5bcb-4f45-9ec5-4a86c214545b"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.77      0.89      0.83        27\n",
+            "           1       0.90      0.79      0.84        34\n",
+            "\n",
+            "    accuracy                           0.84        61\n",
+            "   macro avg       0.84      0.84      0.84        61\n",
+            "weighted avg       0.84      0.84      0.84        61\n",
+            "\n",
+            "mse= 0.16393442622950818\n",
+            "msle= 0.07876278916691827\n",
+            "mae= 0.16393442622950818\n",
+            "rmse= 0.40488816508945796\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.71      0.93      0.81        27\n",
+            "           1       0.92      0.71      0.80        34\n",
+            "\n",
+            "    accuracy                           0.80        61\n",
+            "   macro avg       0.82      0.82      0.80        61\n",
+            "weighted avg       0.83      0.80      0.80        61\n",
+            "\n",
+            "mse= 0.19672131147540983\n",
+            "msle= 0.09451534700030192\n",
+            "mae= 0.19672131147540983\n",
+            "rmse= 0.4435327625727437\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.76      0.81      0.79        27\n",
+            "           1       0.84      0.79      0.82        34\n",
+            "\n",
+            "    accuracy                           0.80        61\n",
+            "   macro avg       0.80      0.80      0.80        61\n",
+            "weighted avg       0.81      0.80      0.80        61\n",
+            "\n",
+            "mse= 0.19672131147540983\n",
+            "msle= 0.09451534700030191\n",
+            "mae= 0.19672131147540983\n",
+            "rmse= 0.4435327625727437\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.56      0.52      0.54        27\n",
+            "           1       0.64      0.68      0.66        34\n",
+            "\n",
+            "    accuracy                           0.61        61\n",
+            "   macro avg       0.60      0.60      0.60        61\n",
+            "weighted avg       0.60      0.61      0.60        61\n",
+            "\n",
+            "mse= 0.39344262295081966\n",
+            "msle= 0.1890306940006038\n",
+            "mae= 0.39344262295081966\n",
+            "rmse= 0.62725004818718\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.88      0.85      0.87        27\n",
+            "           1       0.89      0.91      0.90        34\n",
+            "\n",
+            "    accuracy                           0.89        61\n",
+            "   macro avg       0.89      0.88      0.88        61\n",
+            "weighted avg       0.89      0.89      0.88        61\n",
+            "\n",
+            "mse= 0.11475409836065574\n",
+            "msle= 0.05513395241684278\n",
+            "mae= 0.11475409836065574\n",
+            "rmse= 0.3387537429470791\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qcODIVmodDP7"
+        "id": "OMe4zViGeX1T"
       },
       "execution_count": null,
       "outputs": []
