--- a/Hart_disease_prediction_for_practice.ipynb
+++ b/Hart_disease_prediction_for_practice.ipynb
@@ -2548,6 +2548,98 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install imblearn"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FuAIm1nKpBw2",
+        "outputId": "bb2a84fe-75f8-416b-8167-3e8cb9637d81"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting imblearn\n",
+            "  Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
+            "Requirement already satisfied: imbalanced-learn in /usr/local/lib/python3.10/dist-packages (from imblearn) (0.10.1)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.23.5)\n",
+            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.10.1)\n",
+            "Requirement already satisfied: scikit-learn>=1.0.2 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.2.2)\n",
+            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.3.1)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (3.2.0)\n",
+            "Installing collected packages: imblearn\n",
+            "Successfully installed imblearn-0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from imblearn.over_sampling import SMOTE\n",
+        "sm_over = SMOTE(random_state=2)"
+      ],
+      "metadata": {
+        "id": "pi-GXf5wpGXd"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train_res, y_train_res = sm_over.fit_resample(x_train, y_train.ravel())"
+      ],
+      "metadata": {
+        "id": "1A4aHq3rpK48"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('After OverSampling, the shape of train_X: {}'.format(x_train_res.shape))\n",
+        "print('After OverSampling, the shape of train_y: {} \\n'.format(y_train_res.shape))\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"Before OverSampling, counts of label '1': {}\".format(sum(y_train == 1)))\n",
+        "print(\"Before OverSampling, counts of label '0': {}\".format(sum(y_train== 0)))\n",
+        "print(\"After OverSampling, counts of label '1': {}\".format(sum(y_train_res == 1)))\n",
+        "print(\"After OverSampling, counts of label '0': {}\".format(sum(y_train_res == 0)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Lu0hCoFpNU-",
+        "outputId": "76d56552-b052-499d-d982-d61664ea97ff"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "After OverSampling, the shape of train_X: (240, 3)\n",
+            "After OverSampling, the shape of train_y: (240,) \n",
+            "\n",
+            "Before OverSampling, counts of label '1': 96\n",
+            "Before OverSampling, counts of label '0': 120\n",
+            "After OverSampling, counts of label '1': 120\n",
+            "After OverSampling, counts of label '0': 120\n"
+          ]
+        }
+      ]
     }
   ]
 }
